--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-firebase')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-webview')
     implementation project(':react-native-fbsdk')
@@ -147,6 +148,12 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+
+    // For FCM----
+    implementation "com.google.firebase:firebase-core:16.0.9"
+    // ??
+    //implementation "com.google.android.gms:play-services-base:16.1.0"
+    implementation "com.google.firebase:firebase-messaging:18.0.0"
 }
 
 // Run this once to be able to run the application with BUCK
@@ -155,3 +162,6 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+// For FCM----
+apply plugin: 'com.google.gms.google-services'
