--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.8.3",
     "react-native": "0.59.3",
     "react-native-fbsdk": "^0.8.0",
+    "react-native-firebase": "^5.5.3",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-google-signin": "^1.2.2",
     "react-native-vector-icons": "^6.4.2",
@@ -21,7 +22,8 @@
     "react-redux": "^7.0.1",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
